# colored-networks

./: .gitignore  .pre-commit-config.yaml  example.ipynb  pyproject.toml
.github/workflows/: CI.yml  test.yml
colored_graphs/: colored_graph.py  lambda_calc.py
colored_networks/: beta_reduction_rules.py  colored_network.py  lambda_calc.py  lambda_constants.py  network.py
examples/: addition.ipynb  vertex_connectivity.ipynb
report/: refs.bib  report.tex
report/sections/: decription_of_model.tex  example_computations.tex  lambda_calc.tex  motivation.tex  turing_machines.tex
tests/: lambda_reduction_test.py  test_cloning.py  test_deletion.py  test_numbers.py  test_pairs.py  test_simple_reductions.py
