[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "colored_networks"
version = "0.0.1"
dependencies = [
    "networkx",
    "matplotlib",
    "ipykernel",
    "black",
    "pre-commit",
    "flake8",
    "pyproject-flake8",
]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude = '\.git'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
]